--- a/package.json
+++ b/package.json
@@ -17,12 +17,21 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@commitlint/cli": "18.4.3",
+    "@commitlint/config-conventional": "18.4.3",
+    "@nestjs/cache-manager": "2.1.1",
     "@nestjs/common": "^10.2.10",
     "@nestjs/core": "^10.2.10",
     "@nestjs/platform-express": "^10.2.10",
+    "cache-manager": "5.3.1",
+    "cache-manager-redis-yet": "4.1.2",
+    "lint-staged": "15.1.0",
+    "redis": "4.6.11",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -39,6 +48,7 @@
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "husky": "8.0.3",
     "jest": "^29.7.0",
     "prettier": "^3.1.0",
     "source-map-support": "^0.5.21",
