--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@nestjs/platform-express": "^10.2.10",
     "cache-manager": "5.3.1",
     "cache-manager-redis-yet": "4.1.2",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.0",
+    "dotenv": "^16.3.1",
     "lint-staged": "15.1.0",
     "redis": "4.6.11",
     "reflect-metadata": "^0.1.13",
