--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "@commitlint/config-conventional": "18.4.3",
     "@nestjs/cache-manager": "2.1.1",
     "@nestjs/common": "^10.2.10",
+    "@nestjs/config": "3.1.1",
     "@nestjs/core": "^10.2.10",
     "@nestjs/platform-express": "^10.2.10",
     "cache-manager": "5.3.1",
     "cache-manager-redis-yet": "4.1.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
-    "dotenv": "^16.3.1",
     "lint-staged": "15.1.0",
     "redis": "4.6.11",
     "reflect-metadata": "^0.1.13",
