--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cache-manager-redis-yet": "4.1.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
+    "joi": "17.11.0",
     "lint-staged": "15.1.0",
     "redis": "4.6.11",
     "reflect-metadata": "^0.1.13",
