--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@nestjs/core": "^10.2.10",
     "@nestjs/platform-express": "^10.2.10",
     "cache-manager": "5.3.1",
-    "cache-manager-redis-yet": "4.1.2",
+    "cache-manager-ioredis-yet": "1.2.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "joi": "17.11.0",
