--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "@nestjs/config": "3.1.1",
     "@nestjs/core": "^10.2.10",
     "@nestjs/platform-express": "^10.2.10",
+    "@songkeys/nestjs-redis": "10.0.0",
     "cache-manager": "5.3.1",
     "cache-manager-ioredis-yet": "1.2.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
+    "ioredis": "5.3.2",
     "joi": "17.11.0",
-    "lint-staged": "15.1.0",
-    "redis": "4.6.11",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -54,6 +54,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "8.0.3",
     "jest": "^29.7.0",
+    "lint-staged": "15.1.0",
     "prettier": "^3.1.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
